REGRESSION (251042@main):[ iOS Debug ] ASSERTION FAILED: m_ptr in Ref.h(115) : T *WTF::Ref<WTF::WeakPtrImpl<>>::operator->() const [T = WTF::WeakPtrImpl<>, Traits = WTF::RawPtrTraits<WTF::WeakPtrImpl<>>] https://bugs.webkit.org/show_bug.cgi?id=241141 <rdar://94168551>

Unreviewed, remove null references in the WeakHashMap before calling
WeakHashMap::ensure() to address assertion hits on iOS Debug bots.

This seems to indicate a potential WeakHashMap bug where
WeakHashMap::ensure() can get confused if the WeakMapHash contains
null references but I'll investigate separately.

* Source/WebCore/dom/Element.cpp:
(WebCore::Element::identifier const):

Canonical link: https://commits.webkit.org/251158@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295063 268f45cc-cd09-0410-ab3c-d52691b4dbfc